--- a/nouvelleTechno/public/index.html
+++ b/nouvelleTechno/public/index.html
@@ -30,5 +30,37 @@
             <a href="#" class="inline-flex items-center py-2 px-3 bg-blue-700 rounded-lg text-sm font-medium text-white hover:bg-blue-900">Lire la suite</a>
         </div>
    </div>
+   <div class="container border mx-auto rounded shadow-lg p-10">
+    <h2 class="text-2xl text-blue-500 font-bold mb-6">Connexion</h2>
+    <form action="">
+        <div class="mb-6">
+            <label for="email" class="">E-mail</label>
+            <input type="email" name="email" id="email" class="focus:ring-blue-500 focus:border-blue-500 focus:border-5">
+        </div>
+        <div class="mb-6">
+            <label for="password" class="">Mot de passe</label>
+            <input type="password" name="password" id="password" class="focus:ring-blue-500 focus:border-blue-500 focus:border-5">
+        </div>
+        <div class="mb-6">
+            <button type="submit" class="inline-flex items-center py-2 px-3 bg-blue-700 text-white rounded-lg text-sm font-medium hover:bg-blue-900">Valider</button>
+        </div>
+    </form>
+   </div>
+   <div class="bg-gray-50">
+    <div class="mx-auto max-w-7xl py-12 px-4 sm:px-6 lg:flex lg:items-center lg:justify-between lg:py-16 lg:px-8">
+      <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
+        <span class="block">Ready to dive in?</span>
+        <span class="block text-indigo-600">Start your free trial today.</span>
+      </h2>
+      <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
+        <div class="inline-flex rounded-md shadow">
+          <a href="#" class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-5 py-3 text-base font-medium text-white hover:bg-indigo-700">Get started</a>
+        </div>
+        <div class="ml-3 inline-flex rounded-md shadow">
+          <a href="#" class="inline-flex items-center justify-center rounded-md border border-transparent bg-white px-5 py-3 text-base font-medium text-indigo-600 hover:bg-indigo-50">Learn more</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
