--- a/nouvelleTechno/public/index.html
+++ b/nouvelleTechno/public/index.html
@@ -1,52 +1,60 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailwind Tuto n°2</title>
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tailwind Tuto n°2</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body class="m-3">
-   <h1 class="text-3xl text-red-600 text-center">Tailwind avec script persos</h1>
-   <section class="container border-2 border-blue-500 mx-auto">
+  <h1 class="text-3xl text-red-600 text-center">Tailwind avec script persos</h1>
+  <section class="container border-2 border-blue-500 mx-auto">
     <div class="md:columns-2 lg:columns-4 m-2">
-        <section class="border-2 border-red-500">Section 1</section>
-        <section class="border-2 border-red-500">Section 2</section>
-        <section class="border-2 border-red-500">Section 3</section>
-        <section class="border-2 border-red-500">Section 4</section>
+      <section class="border-2 border-red-500">Section 1</section>
+      <section class="border-2 border-red-500">Section 2</section>
+      <section class="border-2 border-red-500">Section 3</section>
+      <section class="border-2 border-red-500">Section 4</section>
     </div>
-   </section>
-   <h2 class="text-2xl uppercase underline font-bold my-3 text-center">Sous titre</h2>
-   <div class="max-w-sm border border-gray-200 shadow-lg rounded-lg my-3 mx-auto">
-        <a href="#">
-            <img src="images/tailwind.png" alt="tailwind" class="rounded-t-lg">
-        </a>
-        <div class="p-5">
-            <a href="#">
-                <h2 class="mb-2 text-2xl font-bold text-gray-700">Titre de l'article</h2>
-            </a>
-            <p class="mb-3 text-gray-700">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam magni similique autem praesentium perspiciatis cum laboriosam error, itaque quas illo est consequuntur voluptates voluptatibus explicabo!</p>
-            <a href="#" class="inline-flex items-center py-2 px-3 bg-blue-700 rounded-lg text-sm font-medium text-white hover:bg-blue-900">Lire la suite</a>
-        </div>
-   </div>
-   <div class="container border mx-auto rounded shadow-lg p-10">
+  </section>
+  <h2 class="text-2xl uppercase underline font-bold my-3 text-center">Sous titre</h2>
+  <div class="max-w-sm border border-gray-200 shadow-lg rounded-lg my-3 mx-auto">
+    <a href="#">
+      <img src="images/tailwind.png" alt="tailwind" class="rounded-t-lg">
+    </a>
+    <div class="p-5">
+      <a href="#">
+        <h2 class="mb-2 text-2xl font-bold text-gray-700">Titre de l'article</h2>
+      </a>
+      <p class="mb-3 text-gray-700">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam magni similique
+        autem praesentium perspiciatis cum laboriosam error, itaque quas illo est consequuntur voluptates voluptatibus
+        explicabo!</p>
+      <a href="#"
+        class="inline-flex items-center py-2 px-3 bg-blue-700 rounded-lg text-sm font-medium text-white hover:bg-blue-900">Lire
+        la suite</a>
+    </div>
+  </div>
+  <div class="container border mx-auto rounded shadow-lg p-10">
     <h2 class="text-2xl text-blue-500 font-bold mb-6">Connexion</h2>
     <form action="">
-        <div class="mb-6">
-            <label for="email" class="">E-mail</label>
-            <input type="email" name="email" id="email" class="focus:ring-blue-500 focus:border-blue-500 focus:border-5">
-        </div>
-        <div class="mb-6">
-            <label for="password" class="">Mot de passe</label>
-            <input type="password" name="password" id="password" class="focus:ring-blue-500 focus:border-blue-500 focus:border-5">
-        </div>
-        <div class="mb-6">
-            <button type="submit" class="inline-flex items-center py-2 px-3 bg-blue-700 text-white rounded-lg text-sm font-medium hover:bg-blue-900">Valider</button>
-        </div>
+      <div class="mb-6">
+        <label for="email" class="">E-mail</label>
+        <input type="email" name="email" id="email" class="focus:ring-blue-500 focus:border-blue-500 focus:border-5">
+      </div>
+      <div class="mb-6">
+        <label for="password" class="">Mot de passe</label>
+        <input type="password" name="password" id="password"
+          class="focus:ring-blue-500 focus:border-blue-500 focus:border-5">
+      </div>
+      <div class="mb-6">
+        <button type="submit"
+          class="inline-flex items-center py-2 px-3 bg-blue-700 text-white rounded-lg text-sm font-medium hover:bg-blue-900">Valider</button>
+      </div>
     </form>
-   </div>
-   <div class="bg-gray-50">
+  </div>
+  <div class="bg-gray-50">
     <div class="mx-auto max-w-7xl py-12 px-4 sm:px-6 lg:flex lg:items-center lg:justify-between lg:py-16 lg:px-8">
       <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
         <span class="block">Ready to dive in?</span>
@@ -54,13 +62,18 @@
       </h2>
       <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
         <div class="inline-flex rounded-md shadow">
-          <a href="#" class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-5 py-3 text-base font-medium text-white hover:bg-indigo-700">Get started</a>
+          <a href="#"
+            class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-5 py-3 text-base font-medium text-white hover:bg-indigo-700">Get
+            started</a>
         </div>
         <div class="ml-3 inline-flex rounded-md shadow">
-          <a href="#" class="inline-flex items-center justify-center rounded-md border border-transparent bg-white px-5 py-3 text-base font-medium text-indigo-600 hover:bg-indigo-50">Learn more</a>
+          <a href="#"
+            class="inline-flex items-center justify-center rounded-md border border-transparent bg-white px-5 py-3 text-base font-medium text-indigo-600 hover:bg-indigo-50">Learn
+            more</a>
         </div>
       </div>
     </div>
   </div>
 </body>
+
 </html>
